Moving to Java 11